lib/04data_structure/queue/queue.h

typedef struct Queue Queue;
struct Queue {
	Deque data;
};
void queue_drop(void *self);
IMPL_SHY_OWNED_RESULT(Queue, queue_drop, queue_clone_obj)

ResultQueue queue_new(TypeDesc elem);
i32 queue_reserve(Queue *queue, usize additional);
i32 queue_push_raw(Queue *queue, const void *value);
i32 queue_pop(Queue *queue, void *out);
const void *queue_front(const Queue *queue);
void *queue_front_mut(Queue *queue);
const void *queue_back(const Queue *queue);
void *queue_back_mut(Queue *queue);
void queue_clear(Queue *queue);