lib/04data_structure/queue/lib.rs

//generated by gpt-5<noreply@openai.com> @ codex
#![no_std]

use core::ffi::c_void;
use core::marker::PhantomData;
use core::mem::{align_of, size_of, ManuallyDrop, MaybeUninit};
use core::ptr;
use shyos_deque::RawDeque;
use shyos_obj::TypeDesc;
use shyos_result::{CResult, ERROR_INVALID_ARGUMENT, ERROR_NO_VALUE, ERROR_OUT_OF_MEMORY};

#[repr(C)]
pub struct RawQueue {
    pub data: RawDeque,
}

unsafe extern "C" {
    #[link_name = "queue_new"]
    fn c_queue_new(elem: TypeDesc) -> CResult<RawQueue>;
    #[link_name = "queue_reserve"]
    fn c_queue_reserve(queue: *mut RawQueue, additional: usize) -> i32;
    #[link_name = "queue_push_raw"]
    fn c_queue_push_raw(queue: *mut RawQueue, value: *const c_void) -> i32;
    #[link_name = "queue_pop"]
    fn c_queue_pop(queue: *mut RawQueue, out: *mut c_void) -> i32;
    #[link_name = "queue_front"]
    fn c_queue_front(queue: *const RawQueue) -> *const c_void;
    #[link_name = "queue_front_mut"]
    fn c_queue_front_mut(queue: *mut RawQueue) -> *mut c_void;
    #[link_name = "queue_back"]
    fn c_queue_back(queue: *const RawQueue) -> *const c_void;
    #[link_name = "queue_back_mut"]
    fn c_queue_back_mut(queue: *mut RawQueue) -> *mut c_void;
    #[link_name = "queue_clear"]
    fn c_queue_clear(queue: *mut RawQueue);
    #[link_name = "queue_drop"]
    fn c_queue_drop(queue: *mut RawQueue);
}

unsafe extern "C" fn drop_element<T>(value: *mut c_void) {
    unsafe { ptr::drop_in_place(value.cast::<T>()) }
}

fn type_desc<T>() -> TypeDesc {
    TypeDesc {
        size: size_of::<T>(),
        drop: Some(drop_element::<T>),
        clone: None,
    }
}

#[repr(transparent)]
pub struct CQueue<T> {
    raw: RawQueue,
    marker: PhantomData<T>,
}

unsafe impl<T: Send> Send for CQueue<T> {}
unsafe impl<T: Sync> Sync for CQueue<T> {}

impl<T> CQueue<T> {
    pub fn new() -> CResult<Self> {
        if size_of::<T>() == 0 || align_of::<T>() > align_of::<usize>() {
            return CResult::err(ERROR_INVALID_ARGUMENT);
        }
        match unsafe { c_queue_new(type_desc::<T>()) } {
            CResult::Ok(raw) => CResult::ok(Self {
                raw,
                marker: PhantomData,
            }),
            CResult::Err(error) => CResult::err(error),
        }
    }

    pub fn with_capacity(capacity: usize) -> CResult<Self> {
        let mut queue = match Self::new() {
            CResult::Ok(queue) => queue,
            CResult::Err(error) => return CResult::err(error),
        };
        if let CResult::Err(error) = queue.reserve(capacity) {
            return CResult::err(error);
        }
        CResult::ok(queue)
    }

    pub fn len(&self) -> usize {
        self.raw.data.len
    }

    pub fn capacity(&self) -> usize {
        self.raw.data.cap
    }

    pub fn is_empty(&self) -> bool {
        self.len() == 0
    }

    pub fn reserve(&mut self, additional: usize) -> CResult<()> {
        if unsafe { c_queue_reserve(&mut self.raw, additional) } == 0 {
            CResult::ok(())
        } else {
            CResult::err(ERROR_OUT_OF_MEMORY)
        }
    }

    pub fn push(&mut self, value: T) -> CResult<()> {
        let value = ManuallyDrop::new(value);
        if unsafe { c_queue_push_raw(&mut self.raw, (&*value as *const T).cast::<c_void>()) } == 0 {
            CResult::ok(())
        } else {
            drop(ManuallyDrop::into_inner(value));
            CResult::err(ERROR_OUT_OF_MEMORY)
        }
    }

    pub fn pop(&mut self) -> CResult<T> {
        let mut value = MaybeUninit::<T>::uninit();
        if unsafe { c_queue_pop(&mut self.raw, value.as_mut_ptr().cast()) } == 0 {
            CResult::ok(unsafe { value.assume_init() })
        } else {
            CResult::err(ERROR_NO_VALUE)
        }
    }

    pub fn front(&self) -> Option<&T> {
        unsafe { c_queue_front(&self.raw).cast::<T>().as_ref() }
    }

    pub fn front_mut(&mut self) -> Option<&mut T> {
        unsafe { c_queue_front_mut(&mut self.raw).cast::<T>().as_mut() }
    }

    pub fn back(&self) -> Option<&T> {
        unsafe { c_queue_back(&self.raw).cast::<T>().as_ref() }
    }

    pub fn back_mut(&mut self) -> Option<&mut T> {
        unsafe { c_queue_back_mut(&mut self.raw).cast::<T>().as_mut() }
    }

    pub fn clear(&mut self) {
        unsafe { c_queue_clear(&mut self.raw) }
    }
}

impl<T: Clone> Clone for CQueue<T> {
    fn clone(&self) -> Self {
        let mut clone = Self::with_capacity(self.len()).unwrap();
        for index in 0..self.len() {
            let value = unsafe {
                shyos_deque::deque_get_raw(&self.raw.data, index)
                    .cast::<T>()
                    .as_ref()
                    .unwrap()
            };
            clone.push(value.clone()).unwrap();
        }
        clone
    }
}

impl<T> Drop for CQueue<T> {
    fn drop(&mut self) {
        unsafe { c_queue_drop(&mut self.raw) }
    }
}
